--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="glass" style="padding: 20px; border-radius: 15px; border: 3px dashed #ff4d6d; text-align: center; animation: glow 3s infinite;">
                 <h4 id="labelA" style="margin-top: 0;">खुशी</h4>
                 <div id="previewA" style="width: 100%; aspect-ratio: 1; background: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden; margin-bottom: 15px;">
-                    <img id="imgA" src="https://images.unsplash.com/photo-1518893063132-36e46dbe2428?q=80&w=400&h=400&fit=crop" class="placeholder-img" alt="खुशी">
+                    <img id="imgA" src="./1.jpg" class="placeholder-img" alt="खुशी">
                 </div>
                 <button onclick="$('uploadA').click()" style="background: #eee; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer;">बदलें</button>
                 <input type="file" id="uploadA" hidden onchange="handleImage(this, 'previewA')">
