--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <!-- PHOTO SECTION -->
         <section id="photos" class="reveal" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; padding: 40px 0;">
             <div class="glass" style="padding: 20px; border-radius: 15px; border: 3px dashed #ff4d6d; text-align: center; animation: glow 3s infinite;">
-                <h4 id="labelA" style="margin-top: 0;">खुशी</h4>
+                <h4 id="labelA" style="margin-top: 0;">❣️</h4>
                 <div id="previewA" style="width: 100%; aspect-ratio: 1; background: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden; margin-bottom: 15px;">
                     <img id="imgA" src="./1.jpg" class="placeholder-img" alt="खुशी">
                 </div>
@@ -235,9 +235,9 @@
             </div>
 
             <div class="glass" style="padding: 20px; border-radius: 15px; border: 3px dashed #ff4d6d; text-align: center; animation: glow 3s infinite 1.5s;">
-                <h4 id="labelB" style="margin-top: 0;">नितिन</h4>
+                <h4 id="labelB" style="margin-top: 0;"❣️</h4>
                 <div id="previewB" style="width: 100%; aspect-ratio: 1; background: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden; margin-bottom: 15px;">
-                    <img id="imgB" src="https://images.unsplash.com/photo-1492633423870-43d1cd2775eb?q=80&w=400&h=400&fit=crop" class="placeholder-img" alt="नितिन">
+                    <img id="imgB" src="./2.jpg" class="placeholder-img" alt="नितिन">
                 </div>
                 <button onclick="$('uploadB').click()" style="background: #eee; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer;">बदलें</button>
                 <input type="file" id="uploadB" hidden onchange="handleImage(this, 'previewB')">
@@ -252,13 +252,13 @@
                 <!-- Card A (Left side) -->
                 <div id="cardA" class="no-select game-piece left-piece" style="top: 50px; left: 30px;">
                     <div id="cardInnerA" style="width: 100%; height: 100%;">
-                        <img id="gameImgA" src="https://images.unsplash.com/photo-1518893063132-36e46dbe2428?q=80&w=280&h=400&fit=crop" alt="Left Half">
+                        <img id="gameImgA" src="./3.jpg" alt="Left Half">
                     </div>
                 </div>
                 <!-- Card B (Right side) -->
                 <div id="cardB" class="no-select game-piece right-piece" style="bottom: 50px; right: 30px;">
                     <div id="cardInnerB" style="width: 100%; height: 100%;">
-                        <img id="gameImgB" src="https://images.unsplash.com/photo-1492633423870-43d1cd2775eb?q=80&w=280&h=400&fit=crop" alt="Right Half">
+                        <img id="gameImgB" src="./4.jpg" alt="Right Half">
                     </div>
                 </div>
                 <div id="match-badge" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0); transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); z-index: 100; font-size: 2rem; font-weight: bold; text-align: center; width: 100%; pointer-events: none; color: #ff0040; text-shadow: 0 2px 10px rgba(255,255,255,0.8);">
@@ -273,19 +273,19 @@
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
                 <div class="glass photo-slot" style="padding: 10px; border-radius: 15px; background: white;" onclick="$('uploadShared1').click()">
                     <div id="sharedPrev1" style="width: 100%; aspect-ratio: 4/5; background: #f9f9f9; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden;">
-                        <img src="https://images.unsplash.com/photo-1516589174184-c68d8e21e27d?q=80&w=300&h=400&fit=crop" class="placeholder-img" alt="Memory 1">
+                        <img src="./5.jpg" class="placeholder-img" alt="Memory 1">
                     </div>
                     <input type="file" id="uploadShared1" hidden onchange="handleImage(this, 'sharedPrev1')">
                 </div>
                 <div class="glass photo-slot" style="padding: 10px; border-radius: 15px; background: white;" onclick="$('uploadShared2').click()">
                     <div id="sharedPrev2" style="width: 100%; aspect-ratio: 4/5; background: #f9f9f9; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden;">
-                        <img src="https://images.unsplash.com/photo-1529636760656-e09213d095bc?q=80&w=300&h=400&fit=crop" class="placeholder-img" alt="Memory 2">
+                        <img src="./6.jpg" class="placeholder-img" alt="Memory 2">
                     </div>
                     <input type="file" id="uploadShared2" hidden onchange="handleImage(this, 'sharedPrev2')">
                 </div>
                 <div class="glass photo-slot" style="padding: 10px; border-radius: 15px; background: white;" onclick="$('uploadShared3').click()">
                     <div id="sharedPrev3" style="width: 100%; aspect-ratio: 4/5; background: #f9f9f9; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden;">
-                        <img src="https://images.unsplash.com/photo-1474552226712-ac0f0961a954?q=80&w=300&h=400&fit=crop" class="placeholder-img" alt="Memory 3">
+                        <img src="./7.jpg" class="placeholder-img" alt="Memory 3">
                     </div>
                     <input type="file" id="uploadShared3" hidden onchange="handleImage(this, 'sharedPrev3')">
                 </div>
