--- a/index.html
+++ b/index.html
@@ -228,18 +228,18 @@
             <div class="glass" style="padding: 20px; border-radius: 15px; border: 3px dashed #ff4d6d; text-align: center; animation: glow 3s infinite;">
                 <h4 id="labelA" style="margin-top: 0;">❣️</h4>
                 <div id="previewA" style="width: 100%; aspect-ratio: 1; background: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden; margin-bottom: 15px;">
-                    <img id="imgA" src="./1.jpg" class="placeholder-img" alt="खुशी">
+                    <img id="imgA" src="./1.jpg" class="placeholder-img" alt="❣️">
                 </div>
                 <button onclick="$('uploadA').click()" style="background: #eee; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer;">बदलें</button>
                 <input type="file" id="uploadA" hidden onchange="handleImage(this, 'previewA')">
             </div>
 
             <div class="glass" style="padding: 20px; border-radius: 15px; border: 3px dashed #ff4d6d; text-align: center; animation: glow 3s infinite 1.5s;">
-                <h4 id="labelB" style="margin-top: 0;"❣️</h4>
+                <h4 id="labelB" style="margin-top: 0;">❣️</h4>
                 <div id="previewB" style="width: 100%; aspect-ratio: 1; background: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden; margin-bottom: 15px;">
-                    <img id="imgB" src="./2.jpg" class="placeholder-img" alt="नितिन">
+                    <img id="imgB" src="./2.jpg" class="placeholder-img" alt="❣️">
                 </div>
-                <button onclick="$('uploadB').click()" style="background: #eee; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer;">बदलें</button>
+                <button onclick="$('uploadB').click()" style="background: #eee; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer;"></button>
                 <input type="file" id="uploadB" hidden onchange="handleImage(this, 'previewB')">
             </div>
         </section>
@@ -262,7 +262,7 @@
                     </div>
                 </div>
                 <div id="match-badge" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0); transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); z-index: 100; font-size: 2rem; font-weight: bold; text-align: center; width: 100%; pointer-events: none; color: #ff0040; text-shadow: 0 2px 10px rgba(255,255,255,0.8);">
-                     💖
+                     ❣️
                 </div>
             </div>
         </section>
