--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <div id="previewA" style="width: 100%; aspect-ratio: 1; background: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden; margin-bottom: 15px;">
                     <img id="imgA" src="./1.jpg" class="placeholder-img" alt="❣️">
                 </div>
-                <button onclick="$('uploadA').click()" style="background: #eee; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer;">बदलें</button>
+                <button onclick="$('uploadA').click()" style="background: #eee; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer;"></button>
                 <input type="file" id="uploadA" hidden onchange="handleImage(this, 'previewA')">
             </div>
 
