--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         function checkPassword() {
             const input = $('pass-input').value.toLowerCase().trim();
-            if (input === 'khushi') {
+            if (input === 'khushinitin') {
                 const overlay = $('auth-overlay');
                 overlay.style.opacity = '0';
                 overlay.style.pointerEvents = 'none';
